# holipoc

./: .gitignore  Makefile  README.md  classify-examples.py  pyproject.toml  train-model.py
campaign-classification/: classify-examples.py  train-model.py
example-campaigns/: baeume-planzen.txt  hamburg-steht-auf.txt  hilfsgueter-ukraine.txt  tierheim-ukraine.txt
notebooks/: vocabulary.ipynb
