[tool.poetry]
name = "Campaign-Classification"
version = "0.1.0"
description = "Holi Proof of concept: Trains a model to classify campaigns into topics"
authors = ["Tobias Schulze-Heinrichs <tobias.schulzeheinrichs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
metaflow = "^2.5.0"
nltk = "^3.6.5"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
pyarrow = "^14.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

